--- a/teeth.css
+++ b/teeth.css
@@ -91,7 +91,7 @@ button:hover {
 @media screen and (min-width: 320px) and (max-width: 426px) {
     
       .main{
-    width: 195vh;
+    width: 157vh;
 }
    
     .contain{
@@ -99,7 +99,27 @@ button:hover {
     }
     
    
+    .img{
+
+        text-align: center;
+        font-size: 30px;
+        padding-left: 78px;
+        margin-top: 80px;
+    }
+
+    .logo{
+        display: flex;
+        justify-content: center;
+        
+    }
     
+
+    h1 {
+        text-align: center;
+        font-size: 30px;
+        padding-left: 78px;
+    
+    }
    
     
    } 
