--- a/teeth.css
+++ b/teeth.css
@@ -36,17 +36,18 @@ body {
 .logo{
     display: flex;
     justify-content: flex-start;
-    margin-right: 200px;
+    
 }
 .img{
 
-    width: 30%;
+    width: 20%;
 }
    
 
 
 h1 {
     text-align: center;
+    margin-top: 80px;
 
 }
 
@@ -77,7 +78,10 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
 button:hover {
